Various improvements to transcription editor
